# MemeAssembly

./: .gitignore  AUTHORS.md  CMakeLists.txt  CNAME  LICENSE  Makefile  PKGBUILD  README.md  _coverpage.md  _sidebar.md  changelog.md  example.memeasm  getting-started.md  home.md  index.html  install_windows.bat  memeasm-standard.md  memeasm.spec  tmp  tmp.asm
.github/ISSUE_TEMPLATE/: bug_report.md  new-command-suggestion.md
.github/workflows/: build_test.yml  codeql-analysis.yml  compilation_test.yml  compile_and_run.yml  compile_and_run_test.yml  create_installers.yml  deploy_gh_pages.yml  example.memeasm  main.yml  publish-aur.yml  runnable_example.memeasm
commands/: arithmetic-operations.md  debugging.md  functions.md  io-operations.md  jump-markers.md  logical-operations.md  random-commands.md  register-manipulation.md  stack-operations.md
compiler/: analyse.c  analyse.h  analyser.c  analyser.h  commands.h  compiler.c  compiler.cpp  compiler.h  log.c  log.h  masm.c  memeasm.c  parser.c  parser.h  preprocessor.c  preprocessor.h  translate.c  translate.h  translator.c  translator.h
compiler/analyser/: analyser.c  analyser.cpp  analyser.h  analysisHelper.c  analysisHelper.h  comparisons.c  comparisons.h  functions.c  functions.h  jumpMarkers.c  jumpMarkers.h  parameters.c  parameters.h  randomCommands.c  randomCommands.h
compiler/analyzer/: comparisons.c  comparisons.h  functions.c  functions.h  jumpLabels.c  jumpLabels.h  parameters.c  parameters.h  randomCommands.c  randomCommands.h
compiler/logger/: log.c  log.cpp  log.h
compiler/parser/: commandParser.c  commandParser.h  fileParser.c  fileParser.h  functionParser.c  functionParser.h  parameters.h  parser.c  parser.h
compiler/translator/: translator.c  translator.h
docs/: _coverpage.md  _sidebar.md  changelog.md  getting-started.md  getting_started.md  home.md  index.html
docs/commands/: arithmetic-operations.md  functions.md  io-operations.md  jump-markers.md  logical_and.md  move_values.md  pop.md  printing.md  push.md  random-commands.md
examples/: HelloWorld.memeasm  Makefile  alphabet.memeasm  brainfuck.memeasm  fibonacci.memeasm  is_nice.memeasm  reverse-string.memeasm  stalinsort.memeasm  the-link.memeasm
examples/Stalinsort/: Makefile  stalin-sort.memeasm  stalinsort  (+2 more)
nfpm/: generateInstallers.sh  nfpm.yaml  postinstall.sh  postremove.sh
src/: CMakeLists.txt  analyser.cpp  analyser.h  command.h  commandConfig.cpp  commands.h  compileOpts.h  compiler.c  compiler.h  log.cpp  log.h  main.cpp  memeasm.c  parameters.cpp  parameters.h  parser.cpp  parser.h  register.cpp  register.h  version.h.in
src/analyser/: analyser.c  analyser.cpp  analyser.h  analysisHelper.c  analysisHelper.h  comparisons.c  comparisons.h  functions.c  functions.h  jumpMarkers.c  jumpMarkers.h  parameters.c  parameters.cpp  parameters.h  randomCommands.c  randomCommands.h
src/ir/: irCommand.cpp  irCommand.h
src/logger/: log.c  log.h
src/parser/: fileParser.c  fileParser.h  functionParser.c  functionParser.h  parser.cpp  parser.h
src/translator/: translator.c  translator.h
tests/: CMakeLists.txt
wasm/: index.html  install_emcc.sh
(+14 files in other folders)
